@@ -83,7 +83,8 @@ public class Jar extends Zip {
     }
 
     public void setJarfile(File jarFile) {
-        super.setZipfile(jarFile);
+        log("DEPRECATED - The jarfile attribute is deprecated. Use file attribute instead.");
+        super.setFile(jarFile);
     }
 
     public void addConfiguredManifest(Manifest newManifest) throws ManifestException {
