@@ -102,9 +102,22 @@ public class Zip extends MatchingTask {
     /**
      * This is the name/location of where to 
      * create the .zip file.
+     *
+     * @deprecated Use setFile() instead
      */
     public void setZipfile(File zipFile) {
-        this.zipFile = zipFile;
+        log("DEPRECATED - The zipfile attribute is deprecated. Use file attribute instead.");
+        setFile( zipFile );
+    }
+    
+    /**
+     * This is the name/location of where to 
+     * create the .zip file.
+     *
+     * @deprecated Use setFile() instead
+     */
+    public void setFile(File file) {
+        this.zipFile = file;
     }
     
     /**
